fix: minor cleanup & formatting